--- a/app/_components/home/Experience/_Experience.module.scss
+++ b/app/_components/home/Experience/_Experience.module.scss
@@ -43,7 +43,7 @@
 .desc {
   color: var(--fg-soft);
   font-size: clamp(1.5rem, 1.4vw, 1.8rem);
-  line-height: 1.5;
+  line-height: 1.3;
   max-width: 42ch;
   margin: 0;
 }
@@ -69,7 +69,7 @@
   }
   .desc {
     font-size: 1.45rem;
-    line-height: 1.5;
+    line-height: 1.3;
   }
 }
 
