--- a/app/_components/home/Intro/_Intro.module.scss
+++ b/app/_components/home/Intro/_Intro.module.scss
@@ -25,12 +25,12 @@
 
 .body {
   font-size: clamp(2rem, 2.1vw, 2.8rem);
-  line-height: 1.4;
+  line-height: 1.3;
   font-weight: 300;
 
   p {
     max-width: 32ch;
-    margin-bottom: 1.2em;
+    margin-bottom: 1.6em;
   }
 
   p:last-child {
@@ -49,7 +49,11 @@
 @media (max-width: 900px) {
   .body {
     font-size: 1.7rem;
-    line-height: 1.45;
+    line-height: 1.3;
+
+    p {
+      margin-bottom: 1.4em;
+    }
   }
 }
 
@@ -65,11 +69,11 @@
 @media (max-width: 640px) {
   .body {
     font-size: 1.45rem;
-    line-height: 1.5;
+    line-height: 1.3;
 
     p {
       max-width: 100%;
-      margin-bottom: 1em;
+      margin-bottom: 1.3em;
     }
   }
   .label {
